# fruit

./: .gitignore  CMakeLists.txt
configuration/: CMakeLists.txt
src/: CMakeLists.txt  FruitConfig.cmake.in
